# Shadow_Reduction_CUDA

./: CMakeLists.txt  README.md
include/: ShadowReduction.cuh
src/: ColorSpaceTransformation.cu  Convolution.cu  Erosion.cu  HelperFunctions.cu  OtsusMethod.cu  ResultIntegration.cu  main.cu
